Preparatory step to recursion added